--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/roadwatch.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="979.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="979.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
       <BorderPane layoutX="25.0" layoutY="99.0" prefHeight="546.0" prefWidth="470.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
       <Line endX="853.0" layoutX="113.0" layoutY="77.0" startX="-100.0" />
+      <ButtonBar layoutX="103.0" layoutY="23.0" prefHeight="40.0" prefWidth="458.0">
+        <buttons>
+            <Button fx:id="homeButton" mnemonicParsing="false" onAction="#loadHome" text="HOME" />
+          <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" text="WEATHER" />
+            <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadCombine" text="COMBINE" />
+            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" text="PREFERENCES" />
+            <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="25.0" prefWidth="97.0" text="ROAD DATA" />
+        </buttons>
+      </ButtonBar>
    </children>
 </AnchorPane>
