--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
-      <Label layoutX="220.0" layoutY="174.0" text="WEATHER">
+      <Label layoutX="189.0" layoutY="174.0" text="HOME">
          <font>
             <Font size="36.0" />
          </font>
