--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="979.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1220.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
       <BorderPane fx:id="mapPane" layoutX="25.0" layoutY="99.0" prefHeight="546.0" prefWidth="388.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
-      <Line endX="853.0" layoutX="113.0" layoutY="77.0" startX="-100.0" />
-      <ButtonBar layoutX="103.0" layoutY="23.0" prefHeight="40.0" prefWidth="458.0">
+      <Line endX="853.0" layoutX="233.0" layoutY="74.0" startX="-100.0" />
+      <ButtonBar layoutX="13.0" layoutY="23.0" prefHeight="51.0" prefWidth="1120.0">
         <buttons>
-            <Button fx:id="homeButton" mnemonicParsing="false" onAction="#loadHome" text="HOME" />
-          <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" text="WEATHER" />
-            <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadCombine" text="COMBINE" />
-            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" text="PREFERENCES" />
-            <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="25.0" prefWidth="97.0" text="ROAD DATA" />
+            <Button fx:id="homeButton" mnemonicParsing="false" onAction="#loadHome" styleClass="basicButton" text="HOME" />
+          <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" styleClass="basicButton" text="WEATHER" />
+            <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadCombine" styleClass="basicButton" text="COMBINE" />
+            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="basicButton" text="PREFERENCES" />
+            <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="basicButton" text="ROAD DATA" />
         </buttons>
       </ButtonBar>
       <BorderPane fx:id="infoPane" layoutX="436.0" layoutY="99.0" prefHeight="546.0" prefWidth="527.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
