Prototype way of forwarding coordinates from mapController to other components

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
-      <Label layoutX="221.0" layoutY="174.0" text="COMBINE">
+      <Label fx:id="combineLabel" layoutX="221.0" layoutY="174.0" text="COMBINE">
          <font>
             <Font size="36.0" />
          </font>
