Refactor project to use MVC. Give each FXML-file its own controller and link them up. Contains a few examples of how to forward data between SessionData and controllers

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.layout.VBox?>
 <BorderPane  prefHeight="478.0"
             prefWidth="309.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="fi.tuni.roadwatch.MapController">
+            fx:controller="fi.tuni.roadwatch.controllers.MapController">
     <top>
         <HBox fx:id="topControls" alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
