--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.PreferencesController">
    <children>
-      <Label layoutX="189.0" layoutY="174.0" text="PREFERENCES">
+      <Label fx:id="preferencesLabel" layoutX="189.0" layoutY="174.0" text="PREFERENCES">
          <font>
             <Font size="36.0" />
          </font>
