--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.HomeController">
    <children>
-      <Label layoutX="189.0" layoutY="174.0" text="HOME">
+      <Label fx:id="homeLabel" layoutX="248.0" layoutY="147.0" text="HOME">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
+      <Button fx:id="gambinaButton" layoutX="250.0" layoutY="200.0" mnemonicParsing="false" onAction="#onGambinaButtonClick" text="GambinaButton" />
    </children>
 </AnchorPane>
