--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1220.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1220.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
-      <BorderPane fx:id="mapPane" layoutX="25.0" layoutY="99.0" prefHeight="546.0" prefWidth="388.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
+      <BorderPane fx:id="mapPane" layoutX="25.0" layoutY="99.0" prefHeight="707.0" prefWidth="407.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
       <Line endX="853.0" layoutX="233.0" layoutY="74.0" startX="-100.0" />
       <ButtonBar layoutX="13.0" layoutY="23.0" prefHeight="51.0" prefWidth="1120.0">
         <buttons>
@@ -17,6 +19,6 @@
             <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="basicButton" text="ROAD DATA" />
         </buttons>
       </ButtonBar>
-      <BorderPane fx:id="infoPane" layoutX="436.0" layoutY="99.0" prefHeight="546.0" prefWidth="527.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
+      <BorderPane fx:id="infoPane" layoutX="438.0" layoutY="99.0" prefHeight="707.0" prefWidth="763.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
    </children>
 </AnchorPane>
