--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1220.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
-   <children>
-      <BorderPane fx:id="mapPane" layoutX="25.0" layoutY="99.0" prefHeight="707.0" prefWidth="407.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
-      <Line endX="853.0" layoutX="233.0" layoutY="74.0" startX="-100.0" />
-      <ButtonBar layoutX="13.0" layoutY="23.0" prefHeight="51.0" prefWidth="1120.0">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+    <children>
+      <BorderPane fx:id="mapPane" layoutY="100.0" prefHeight="620.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
+      <Line endX="870.0" layoutX="399.0" layoutY="88.0" startX="-386.0" />
+      <ButtonBar layoutX="133.0" layoutY="24.0" prefHeight="51.0" prefWidth="1120.0">
         <buttons>
             <Button fx:id="homeButton" mnemonicParsing="false" onAction="#loadHome" styleClass="basicButton" text="HOME" />
           <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" styleClass="basicButton" text="WEATHER" />
@@ -19,6 +19,6 @@
             <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="basicButton" text="ROAD DATA" />
         </buttons>
       </ButtonBar>
-      <BorderPane fx:id="infoPane" layoutX="438.0" layoutY="99.0" prefHeight="707.0" prefWidth="763.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
+      <BorderPane fx:id="infoPane" layoutX="440.0" layoutY="100.0" prefHeight="620.0" prefWidth="840.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
    </children>
 </AnchorPane>
