--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.CombineController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.CombineController">
    <children>
-      <Label fx:id="combineLabel" layoutX="221.0" layoutY="132.0" text="COMBINE">
+      <Label fx:id="combineLabel" layoutX="221.0" layoutY="14.0" text="COMBINE">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
+      <MenuButton layoutX="524.0" layoutY="90.0" mnemonicParsing="false" styleClass="menu-bar" stylesheets="@stylesheet.css">
+         <items>
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="6H" />
+            <MenuItem mnemonicParsing="false" styleClass="menu-item" text="12H" />
+         </items>
+      </MenuButton>
+      <Label layoutX="350.0" layoutY="95.0" styleClass="smallText" stylesheets="@stylesheet.css" text="Choose timeline" />
+      <Label layoutX="350.0" layoutY="145.0" styleClass="smallHeading" stylesheets="@stylesheet.css" text="LOCATION" />
+      <Label layoutX="360.0" layoutY="260.0" styleClass="smallText" stylesheets="@stylesheet.css" text="Compare data" />
+      <Label layoutX="360.0" layoutY="213.0" styleClass="smallHeading" stylesheets="@stylesheet.css" text="SAVE DATA" />
+      <Button layoutX="384.0" layoutY="335.0" mnemonicParsing="false" styleClass="basicButton" stylesheets="@stylesheet.css" text="FETCH DATA" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="95.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Weather" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="130.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Visibility" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="162.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Wind" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="200.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Temperature" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="234.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Road condition" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="275.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Maintenance" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="320.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" stylesheets="@stylesheet.css" text="Alerts" textFill="WHITE" />
+      <ToggleButton layoutX="506.0" layoutY="263.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" />
    </children>
 </AnchorPane>
