--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
 
 <AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
     <children>
-      <BorderPane fx:id="mapPane" layoutY="100.0" prefHeight="620.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
+      <BorderPane fx:id="mapPane" layoutY="100.0" maxHeight="620.0" maxWidth="440.0" minHeight="620.0" minWidth="440.0" prefHeight="620.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" />
       <Line endX="870.0" layoutX="399.0" layoutY="88.0" startX="-386.0" />
       <ButtonBar layoutX="133.0" layoutY="24.0" prefHeight="51.0" prefWidth="1120.0">
         <buttons>
@@ -19,6 +21,6 @@
             <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="basicButton" text="ROAD DATA" />
         </buttons>
       </ButtonBar>
-      <BorderPane fx:id="infoPane" layoutX="440.0" layoutY="100.0" prefHeight="620.0" prefWidth="840.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
+      <BorderPane fx:id="infoPane" layoutX="440.0" layoutY="100.0" maxHeight="620.0" maxWidth="840.0" minHeight="620.0" minWidth="840.0" prefHeight="620.0" prefWidth="840.0" style="-fx-border-color: orange; -fx-border-width: 5;" />
    </children>
 </AnchorPane>
