Fix null/stylesheet error

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="619.0" prefWidth="727.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
+<AnchorPane prefHeight="619.0" prefWidth="727.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
    <children>
       <Label fx:id="roadLabel" layoutX="192.0" layoutY="14.0" text="ROADDATA">
          <font>
