--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="513.0" prefWidth="605.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.WeatherController">
+<AnchorPane prefHeight="513.0" prefWidth="605.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.WeatherController">
    <children>
       <Label fx:id="weatherLabel" layoutX="43.0" layoutY="29.0" styleClass="basicText" text="WEATHER City Date">
          <font>
