--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -7,19 +8,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="619.0" prefWidth="727.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
+<AnchorPane prefHeight="542.0" prefWidth="1019.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
    <children>
-      <Label fx:id="roadLabel" layoutX="192.0" layoutY="14.0" text="ROADDATA">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <VBox layoutX="14.0" layoutY="103.0" prefHeight="205.0" prefWidth="219.0" styleClass="backgroundBlue">
+      <VBox layoutX="14.0" layoutY="20.0" prefHeight="469.0" prefWidth="333.0" styleClass="backgroundBlue">
          <children>
             <Label styleClass="basicHeading" text="SELECT DATA" />
-            <Line endX="40.5" startX="-100.0" />
+            <Line endX="204.2928924560547" endY="-1.4497476816177368" startX="-100.0" stroke="WHITE" />
             <Label styleClass="basicHeadingGrey" text="ROAD CONDITION" />
             <Label styleClass="basicTextGrey" text="    VISIBILITY" />
             <Label styleClass="basicTextGrey" text="    FRICTION" />
@@ -32,14 +27,17 @@
             <Label styleClass="basicTextGrey" text="    TASKTYPE 3" />
             <Label styleClass="basicHeadingGrey" text="ALERTS" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
-      <Label layoutX="256.0" layoutY="150.0" styleClass="smallHeading" text="VISIBILITY" />
-      <Label layoutX="481.0" layoutY="150.0" styleClass="smallHeading" text="LOCATION" />
-      <Label layoutX="469.0" layoutY="223.0" styleClass="smallText" text="TIMELINE 2H 4H 6H 12H" />
-      <Label layoutX="469.0" layoutY="310.0" styleClass="smallText" text="Time of day" />
-      <Button layoutX="503.0" layoutY="477.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" />
-      <Button layoutX="256.0" layoutY="477.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
-      <MenuButton layoutX="629.0" layoutY="148.0" mnemonicParsing="false" styleClass="menu-bar">
+      <Label layoutX="472.0" layoutY="76.0" styleClass="smallHeading" text="VISIBILITY" />
+      <Label layoutX="764.0" layoutY="76.0" styleClass="smallHeading" text="LOCATION" />
+      <Label layoutX="764.0" layoutY="192.0" styleClass="smallText" text="TIMELINE 2H 4H 6H 12H" />
+      <Label layoutX="775.0" layoutY="250.0" styleClass="smallText" text="Time of day" />
+      <Button layoutX="787.0" layoutY="452.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" />
+      <Button layoutX="442.0" layoutY="452.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
+      <MenuButton layoutX="926.0" layoutY="245.0" mnemonicParsing="false" styleClass="menu-bar">
         <items>
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
