--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
@@ -40,11 +40,14 @@
     </center>
     <bottom>
         <HBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
+
             <children>
                 <Label fx:id="labelCenter" text="Center: "/>
                 <Label fx:id="labelExtent" text="Extent: "/>
                 <Label fx:id="labelZoom" text="Zoom: "/>
                 <Label fx:id="labelEvent" text="Event: "/>
+                <Button fx:id="addButton" text="Add"/>
+
             </children>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -82,8 +85,6 @@
                     <content>
                         <VBox spacing="10.0">
                             <children>
-                                <CheckBox fx:id="checkTrackMagenta" text="magenta track" maxWidth="Infinity"/>
-                                <CheckBox fx:id="checkTrackCyan" text="cyan track" maxWidth="Infinity"/>
                                 <CheckBox fx:id="checkDrawPolygon" text="draw a polygon" maxWidth="Infinity"/>
                             </children>
                         </VBox>
