--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -7,16 +10,10 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.CombineController">
+<AnchorPane prefHeight="542.0" prefWidth="1250.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.CombineController">
    <children>
-      <Label fx:id="combineLabel" layoutX="221.0" layoutY="14.0" text="COMBINE">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <MenuButton layoutX="524.0" layoutY="90.0" mnemonicParsing="false" styleClass="menu-bar">
+      <MenuButton layoutX="1170.0" layoutY="37.0" mnemonicParsing="false" styleClass="menu-bar">
          <items>
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
@@ -24,18 +21,26 @@
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="12H" />
          </items>
       </MenuButton>
-      <Label layoutX="350.0" layoutY="95.0" styleClass="smallText"  text="Choose timeline" />
-      <Label layoutX="350.0" layoutY="145.0" styleClass="smallHeading" text="LOCATION" />
-      <Label layoutX="360.0" layoutY="260.0" styleClass="smallText"  text="Compare data" />
-      <Label layoutX="360.0" layoutY="213.0" styleClass="smallHeading" text="SAVE DATA" />
-      <Button layoutX="384.0" layoutY="335.0" mnemonicParsing="false" styleClass="basicButton"  text="FETCH DATA" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="95.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Weather" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="130.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Visibility" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="162.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Wind" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="200.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Temperature" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="234.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Road condition" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="275.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Maintenance" textFill="WHITE" />
-      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="320.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0"  text="Alerts" textFill="WHITE" />
-      <ToggleButton layoutX="506.0" layoutY="263.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" />
+      <Label layoutX="1002.0" layoutY="42.0" styleClass="smallText" text="Choose timeline" />
+      <Label layoutX="1048.0" layoutY="145.0" styleClass="smallHeading" text="LOCATION" />
+      <Label layoutX="1002.0" layoutY="363.0" styleClass="smallText" text="Compare data" />
+      <Label layoutX="1043.0" layoutY="303.0" styleClass="smallHeading" text="SAVE DATA" />
+      <Button layoutX="1037.0" layoutY="440.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="95.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Weather" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="130.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Visibility" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="162.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Wind" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="200.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Temperature" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="234.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Road condition" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="275.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Maintenance" textFill="WHITE" />
+      <CheckBox alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="45.0" layoutY="320.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="184.0" text="Alerts" textFill="WHITE" />
+      <ToggleButton layoutX="1179.0" layoutY="366.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" />
+      <LineChart layoutX="351.0" layoutY="49.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
    </children>
 </AnchorPane>
