--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -9,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane prefHeight="542.0" prefWidth="1019.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
+<AnchorPane prefHeight="542.0" prefWidth="1250.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.controllers.RoadController">
    <children>
       <VBox layoutX="14.0" layoutY="20.0" prefHeight="469.0" prefWidth="333.0" styleClass="backgroundBlue">
          <children>
@@ -31,13 +34,13 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <Label layoutX="472.0" layoutY="76.0" styleClass="smallHeading" text="VISIBILITY" />
-      <Label layoutX="764.0" layoutY="76.0" styleClass="smallHeading" text="LOCATION" />
-      <Label layoutX="764.0" layoutY="192.0" styleClass="smallText" text="TIMELINE 2H 4H 6H 12H" />
-      <Label layoutX="775.0" layoutY="250.0" styleClass="smallText" text="Time of day" />
-      <Button layoutX="787.0" layoutY="452.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" />
-      <Button layoutX="442.0" layoutY="452.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
-      <MenuButton layoutX="926.0" layoutY="245.0" mnemonicParsing="false" styleClass="menu-bar">
+      <Label layoutX="593.0" layoutY="24.0" styleClass="smallHeading" text="VISIBILITY" />
+      <Label layoutX="1078.0" layoutY="41.0" styleClass="smallHeading" text="LOCATION" />
+      <Label layoutX="992.0" layoutY="220.0" styleClass="smallText" text="TIMELINE 2H 4H 6H 12H" />
+      <Label layoutX="1027.0" layoutY="271.0" styleClass="smallText" text="Time of day" />
+      <Button layoutX="1046.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" />
+      <Button layoutX="562.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
+      <MenuButton layoutX="1174.0" layoutY="266.0" mnemonicParsing="false" styleClass="menu-bar">
         <items>
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
@@ -45,5 +48,13 @@
             <MenuItem mnemonicParsing="false" styleClass="menu-item" text="12H" />
         </items>
       </MenuButton>
+      <LineChart layoutX="402.0" layoutY="66.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
    </children>
 </AnchorPane>
