--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<VBox fx:id="root" prefHeight="745.0" prefWidth="1304.0" spacing="10.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<VBox fx:id="root" prefHeight="745.0" prefWidth="1304.0" spacing="10.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
       <HBox nodeOrientation="LEFT_TO_RIGHT">
-         <Label prefHeight="58.0" prefWidth="412.0" styleClass="logo" text="roadwatch" />
-         <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="50.0" prefWidth="1257.0">
+         <Label fx:id="logo" maxWidth="240.0" prefHeight="40.0" prefWidth="240.0" styleClass="logo" />
+         <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="590.0">
             <buttons>
-               <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadCombine" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" ButtonBar.buttonData="LEFT" />
+               <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" translateX="-50.0" ButtonBar.buttonData="LEFT" />
+               <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" translateX="-40.0" ButtonBar.buttonData="LEFT" />
+               <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadQuickView" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" translateX="-30.0" ButtonBar.buttonData="LEFT" />
+               <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" translateX="-20.0" ButtonBar.buttonData="LEFT" />
                <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="roadDataIcon" ButtonBar.buttonData="LEFT" />
             </buttons>
             <opaqueInsets>
@@ -29,6 +24,7 @@
                <Insets />
             </HBox.margin>
          </ButtonBar>
+         <Label styleClass="basicText" text="X Traffic messages" />
       </HBox>
       <Line endX="870.0" startX="-386.0" stroke="#78c2e2" styleClass="backgroundBlue" />
       <Label fx:id="siteLabel" styleClass="bigHeading" text="HOME" />
