Restructure controllers, slim down map ui, fix a few display bugs

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
@@ -1,37 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- Copyright 2015-2020 Peter-Josef Meisch (pj.meisch@sothawo.com)
 
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
 <?import com.sothawo.mapjfx.MapView?>
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<BorderPane  prefHeight="478.0"
-            prefWidth="309.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="fi.tuni.roadwatch.controllers.MapController">
+
+<BorderPane prefHeight="478.0" prefWidth="309.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.MapController">
     <top>
         <HBox fx:id="topControls" alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="buttonZoom" text="Zoom 14"/>
-                <Slider fx:id="sliderZoom" blockIncrement="1.0" majorTickUnit="7.0" max="28.0" minorTickCount="6"
-                        showTickLabels="true" showTickMarks="true" snapToTicks="true" value="14.0" HBox.hgrow="ALWAYS"/>
+                <Button fx:id="buttonZoom" text="Zoom 14" />
+                <Slider fx:id="sliderZoom" blockIncrement="1.0" majorTickUnit="7.0" max="28.0" minorTickCount="6" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="14.0" HBox.hgrow="ALWAYS" />
             </children>
             <padding>
-                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
             </padding>
         </HBox>
     </top>
@@ -42,25 +36,27 @@
         <HBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
 
             <children>
-                <Button fx:id="addButton" text="Add"/>
-
+                <Button fx:id="buttonAddPolygon" text="Add" />
+                <Button fx:id="buttonClearPolygon" text="Clear" />
+                <CheckBox fx:id="checkDrawPolygon" maxWidth="Infinity" text="Draw" />
+                <CheckBox fx:id="checkConstrainFinland" maxWidth="Infinity" text="Constrain"/>
             </children>
             <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
     </bottom>
-    <left >
-        <Accordion fx:id="leftControls" BorderPane.alignment="CENTER" minWidth="100" maxWidth="100">
+    <left>
+        <Accordion fx:id="leftControls" maxWidth="100" minWidth="100" BorderPane.alignment="CENTER">
             <panes>
                 <TitledPane fx:id="optionsLocations" animated="true" text="locations">
                     <content>
                         <VBox spacing="4">
                             <children>
-                                <Button fx:id="buttonKotka" text="Kotka" maxWidth="Infinity"/>
-                                <Button fx:id="buttonHervanta" text="Hervanta" maxWidth="Infinity"/>
-                                <Button fx:id="buttonLahti" text="Lahti" maxWidth="Infinity"/>
-                                <Button fx:id="buttonAllLocations" text="All" maxWidth="Infinity"/>
+                                <Button fx:id="buttonKotka" maxWidth="Infinity" text="Kotka" />
+                                <Button fx:id="buttonHervanta" maxWidth="Infinity" text="Hervanta" />
+                                <Button fx:id="buttonLahti" maxWidth="Infinity" text="Lahti" />
+                                <Button fx:id="buttonAllLocations" maxWidth="Infinity" text="All" />
                             </children>
                         </VBox>
                     </content>
@@ -69,34 +65,25 @@
                     <content>
                         <VBox spacing="10.0">
                             <children>
-                                <CheckBox fx:id="checkKotkaMarker" text="Kotka" maxWidth="Infinity"/>
-                                <CheckBox fx:id="checkHervantaMarker" text="Hervanta" maxWidth="Infinity"/>
-                                <CheckBox fx:id="checkLahtiMarker" text="Lahti" maxWidth="Infinity"/>
-                                <CheckBox fx:id="checkClickMarker" text="click location" maxWidth="Infinity"/>
+                                <CheckBox fx:id="checkKotkaMarker" maxWidth="Infinity" text="Kotka" />
+                                <CheckBox fx:id="checkHervantaMarker" maxWidth="Infinity" text="Hervanta" />
+                                <CheckBox fx:id="checkLahtiMarker" maxWidth="Infinity" text="Lahti" />
+                                <CheckBox fx:id="checkClickMarker" maxWidth="Infinity" text="click location" />
                             </children>
                         </VBox>
                     </content>
                 </TitledPane>
-                <TitledPane fx:id="optionsTracks" animated="true" text="tracks and polygons">
-                    <content>
-                        <VBox spacing="10.0">
-                            <children>
-                                <CheckBox fx:id="checkDrawPolygon" text="draw a polygon" maxWidth="Infinity"/>
-                            </children>
-                        </VBox>
-                    </content>
-                </TitledPane>
-                <TitledPane fx:id="optionsMisc" animated="true" text="misc">
-                    <content>
-                        <VBox spacing="10.0">
-                            <children>
-                                <Label text="animation duration"/>
-                                <TextField fx:id="animationDuration" prefWidth="120.0" promptText="milliseconds"/>
-                                <CheckBox fx:id="checkConstrainFinland" text="constrain to Germany" maxWidth="Infinity"/>
-                            </children>
-                        </VBox>
-                    </content>
-                </TitledPane>
+<!--                <TitledPane fx:id="optionsMisc" animated="true" text="misc">-->
+<!--                    <content>-->
+<!--                        <VBox spacing="10.0">-->
+<!--                            <children>-->
+<!--                                <Label text="animation duration" />-->
+<!--                                <TextField fx:id="animationDuration" prefWidth="120.0" promptText="milliseconds" />-->
+<!--                                <CheckBox fx:id="checkConstrainFinland" maxWidth="Infinity" text="constrain to Germany" />-->
+<!--                            </children>-->
+<!--                        </VBox>-->
+<!--                    </content>-->
+<!--                </TitledPane>-->
             </panes>
         </Accordion>
     </left>
