--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -18,29 +19,29 @@
          <children>
             <Label styleClass="basicHeading" text="SELECT DATA" />
             <Line endX="204.2928924560547" endY="-1.4497476816177368" startX="-100.0" stroke="WHITE" />
-            <Label styleClass="basicHeadingGrey" text="ROAD CONDITION" />
-            <Label styleClass="basicTextGrey" text="    VISIBILITY" />
-            <Label styleClass="basicTextGrey" text="    FRICTION" />
-            <Label styleClass="basicTextGrey" text="    PRECIPITATION" />
-            <Label styleClass="basicTextGrey" text="    WINTER SLIPPERINESS" />
-            <Label styleClass="basicTextGrey" text="    OVERALL CONDITION" />
+            <Label fx:id="RCLabel" styleClass="basicHeadingGrey" text="ROAD CONDITION" />
+            <Label fx:id="visibilityLabel" onMouseClicked="#onVisibilityClick" styleClass="basicTextGrey" text="    VISIBILITY" />
+            <Label fx:id="frictionLabel" onMouseClicked="#onFrictionClick" styleClass="basicTextGrey" text="    FRICTION" />
+            <Label fx:id="precipitationLabel" onMouseClicked="#onPrecipitationClick" styleClass="basicTextGrey" text="    PRECIPITATION" />
+            <Label fx:id="winterSlipperinessLabel" onMouseClicked="#onWinterSlipperinessClick" styleClass="basicTextGrey" text="    WINTER SLIPPERINESS" />
+            <Label fx:id="overallConditionLabel" onMouseClicked="#onOverallConditionClick" styleClass="basicTextGrey" text="    OVERALL CONDITION" />
             <Label styleClass="basicHeadingGrey" text="MAINTENANCE" />
             <Label styleClass="basicTextGrey" text="    TASKTYPE 1" />
             <Label styleClass="basicTextGrey" text="    TASKTYPE 2" />
             <Label styleClass="basicTextGrey" text="    TASKTYPE 3" />
-            <Label styleClass="basicHeadingGrey" text="ALERTS" />
+            <Label fx:id="alertsLabel" onMouseClicked="#onAlertsClick" styleClass="basicHeadingGrey" text="ALERTS" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <Label layoutX="593.0" layoutY="24.0" styleClass="smallHeading" text="VISIBILITY" />
-      <Label layoutX="1078.0" layoutY="41.0" styleClass="smallHeading" text="LOCATION" />
-      <Label layoutX="992.0" layoutY="220.0" styleClass="smallText" text="TIMELINE 2H 4H 6H 12H" />
-      <Label layoutX="1027.0" layoutY="271.0" styleClass="smallText" text="Time of day" />
+      <Label fx:id="infoLabel" alignment="CENTER" layoutX="443.0" layoutY="24.0" prefHeight="35.0" prefWidth="446.0" styleClass="smallHeading" />
+      <Label layoutX="1022.0" layoutY="42.0" styleClass="smallHeading" text="LOCATION" />
+      <Label layoutX="1022.0" layoutY="167.0" styleClass="smallHeading" text="TIMELINE" />
+      <Label layoutX="1027.0" layoutY="214.0" styleClass="smallText" text="Time of day" />
       <Button layoutX="1046.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" />
       <Button layoutX="562.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
-      <MenuButton layoutX="1174.0" layoutY="266.0" mnemonicParsing="false" styleClass="menu-bar">
+      <MenuButton layoutX="1175.0" layoutY="209.0" mnemonicParsing="false" styleClass="menu-bar">
         <items>
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
           <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
@@ -56,5 +57,10 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
+      <DatePicker layoutX="1033.0" layoutY="316.0" />
+      <Label layoutX="1037.0" layoutY="271.0" styleClass="smallText" text="Start date" />
+      <Label layoutX="1036.0" layoutY="354.0" styleClass="smallText" text="End date" />
+      <DatePicker layoutX="1033.0" layoutY="394.0" />
+      <Button layoutX="882.0" layoutY="473.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
