--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roadwatch.fxml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 
-<VBox fx:id="root" prefHeight="745.0" prefWidth="1304.0" spacing="10.0" styleClass="background" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
+<GridPane fx:id="root" hgap="10.0" maxHeight="1080.0" maxWidth="1920.0" minHeight="0.0" minWidth="0.0" prefHeight="1080.0" prefWidth="1920.0" styleClass="background" stylesheets="@stylesheet.css" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadWatchController">
    <children>
-      <HBox nodeOrientation="LEFT_TO_RIGHT">
-         <Label fx:id="logo" maxWidth="240.0" prefHeight="40.0" prefWidth="240.0" styleClass="logo" />
-         <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="590.0">
-            <buttons>
-               <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" translateX="-50.0" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" translateX="-40.0" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadQuickView" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" translateX="-30.0" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" translateX="-20.0" ButtonBar.buttonData="LEFT" />
-               <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="roadDataIcon" ButtonBar.buttonData="LEFT" />
-            </buttons>
-            <opaqueInsets>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </opaqueInsets>
-            <HBox.margin>
-               <Insets />
-            </HBox.margin>
-         </ButtonBar>
-         <Label styleClass="basicText" text="X Traffic messages" />
-      </HBox>
-      <Line endX="870.0" startX="-386.0" stroke="#78c2e2" styleClass="backgroundBlue" />
-      <Label fx:id="siteLabel" styleClass="bigHeading" text="HOME" />
-      <StackPane fx:id="contentPane" prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <BorderPane fx:id="mapPane" maxHeight="620.0" maxWidth="440.0" minHeight="566.0" minWidth="440.0" prefHeight="566.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" StackPane.alignment="CENTER_LEFT" />
-            <BorderPane fx:id="infoPane" maxHeight="620.0" maxWidth="840.0" minHeight="0" minWidth="0" prefHeight="566.0" prefWidth="820.0" style="-fx-border-color: orange; -fx-border-width: 5;" StackPane.alignment="CENTER_RIGHT" />
-         </children>
-      </StackPane>
+      <Label styleClass="basicText" text="X Traffic messages" GridPane.columnIndex="2" />
+      <Line endX="954.5" startX="-386.0" stroke="#78c2e2" styleClass="backgroundBlue" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+      <Label fx:id="siteLabel" styleClass="bigHeading" text="HOME" GridPane.rowIndex="2" />
+      <Label fx:id="logo" maxWidth="240.0" prefHeight="40.0" prefWidth="240.0" styleClass="logo" />
+      <BorderPane fx:id="mapPane" maxHeight="620.0" maxWidth="440.0" minHeight="501.0" minWidth="440.0" prefHeight="501.0" prefWidth="440.0" style="-fx-border-color: blue; -fx-border-width: 5;" GridPane.rowIndex="3" />
+      <BorderPane fx:id="infoPane" maxHeight="620.0" maxWidth="897.0" minHeight="0" minWidth="0" prefHeight="604.0" prefWidth="897.0" style="-fx-border-color: orange; -fx-border-width: 5;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+      <ButtonBar fx:id="buttonBar" buttonMinWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="590.0" GridPane.columnIndex="1">
+         <buttons>
+            <Button fx:id="homeButton" minHeight="-Infinity" minWidth="26.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" styleClass="homeIcon" translateX="-50.0" ButtonBar.buttonData="LEFT" />
+            <Button fx:id="weatherButton" mnemonicParsing="false" onAction="#loadWeather" prefHeight="51.0" styleClass="weatherIcon" translateX="-40.0" ButtonBar.buttonData="LEFT" />
+            <Button fx:id="combineButton" mnemonicParsing="false" onAction="#loadQuickView" prefHeight="97.0" prefWidth="190.0" styleClass="combineIcon" translateX="-30.0" ButtonBar.buttonData="LEFT" />
+            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#loadPreferences" styleClass="preferencesIcon" translateX="-20.0" ButtonBar.buttonData="LEFT" />
+            <Button fx:id="roadDataButton" mnemonicParsing="false" onAction="#loadRoadData" prefHeight="51.0" prefWidth="97.0" styleClass="roadDataIcon" ButtonBar.buttonData="LEFT" />
+         </buttons>
+         <opaqueInsets>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </opaqueInsets>
+      </ButtonBar>
    </children>
    <opaqueInsets>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -41,4 +37,15 @@
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
-</VBox>
+   <columnConstraints>
+      <ColumnConstraints maxWidth="1252.0" minWidth="406.0" prefWidth="437.0" />
+      <ColumnConstraints maxWidth="874.0" minWidth="10.0" prefWidth="802.0" />
+      <ColumnConstraints maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="66.0" />
+      <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="15.0" />
+      <RowConstraints maxHeight="385.0" minHeight="0.0" prefHeight="71.0" />
+      <RowConstraints maxHeight="561.0" minHeight="497.0" prefHeight="515.0" />
+   </rowConstraints>
+</GridPane>
