--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -14,21 +15,28 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="43.0" layoutY="98.0" prefHeight="47.0" prefWidth="435.0" styleClass="basicHeading" text="NOW 2H 4H 6H 12H" />
+      <Label layoutX="43.0" layoutY="98.0" prefHeight="47.0" prefWidth="101.0" styleClass="basicHeading" text="NOW" />
       <Label layoutX="43.0" layoutY="431.0" prefHeight="35.0" prefWidth="88.0" styleClass="smallHeading" text="WIND  " />
-      <Button layoutX="614.0" layoutY="121.0" mnemonicParsing="false" styleClass="basicButton" text="AVERAGE TEMP" />
-      <Button layoutX="611.0" layoutY="204.0" mnemonicParsing="false" styleClass="basicButton" text="MIN-MAX TEMP" />
-      <MenuButton layoutX="760.0" layoutY="27.0" mnemonicParsing="false" styleClass="menu-bar">
-        <items>
-          <MenuItem mnemonicParsing="false" styleClass="menu-item" text="2H" />
-          <MenuItem mnemonicParsing="false" styleClass="menu-item" text="4H" />
-            <MenuItem mnemonicParsing="false" text="6H" />
-            <MenuItem mnemonicParsing="false" text="12H" />
-        </items>
-      </MenuButton>
+      <Button layoutX="611.0" layoutY="197.0" mnemonicParsing="false" styleClass="basicButton" text="AVERAGE TEMP" />
+      <Button layoutX="608.0" layoutY="269.0" mnemonicParsing="false" styleClass="basicButton" text="MIN-MAX TEMP" />
       <Label layoutX="552.0" layoutY="30.0" styleClass="basicTextWhite" text="Choose timeline" />
       <Label layoutX="43.0" layoutY="504.0" styleClass="valueText" text="X m/s" />
       <Label layoutX="275.0" layoutY="504.0" styleClass="valueText" text="Y km" />
       <Label layoutX="275.0" layoutY="431.0" styleClass="smallHeading" text="VISIBILITY" />
+      <Label fx:id="label2" layoutX="144.0" layoutY="98.0" prefHeight="47.0" prefWidth="52.0" styleClass="basicHeading" text="2H" />
+      <Label fx:id="label4" layoutX="216.0" layoutY="98.0" prefHeight="47.0" prefWidth="52.0" styleClass="basicHeading" text="4H" />
+      <Label fx:id="label6" layoutX="282.0" layoutY="98.0" prefHeight="47.0" prefWidth="52.0" styleClass="basicHeading" text="6H" />
+      <Label fx:id="label12" layoutX="347.0" layoutY="98.0" prefHeight="47.0" prefWidth="65.0" styleClass="basicHeading" text="12H" />
+      <Label fx:id="test" layoutX="261.0" layoutY="272.0" styleClass="bigText" />
+      <ComboBox fx:id="comboBox" layoutX="745.0" layoutY="28.0" onAction="#test" prefHeight="35.0" prefWidth="72.0" styleClass="combo-box">
+       <items>
+           <FXCollections fx:factory="observableArrayList">
+               <String fx:id="item2" fx:value="2H" />
+               <String fx:id="item4" fx:value="4H" />
+               <String fx:id="item6" fx:value="6H" />
+               <String fx:id="item12" fx:value="12H" />
+           </FXCollections>
+       </items>
+      </ComboBox>
    </children>
 </AnchorPane>
